@@ -370,8 +370,9 @@ Mat([0, 0, 0, 2, 0]), 2]]], [[0]~, Mat(1)]]], [[2], Vecsmall([1]), Mat(1/2),
 ; 39821, 2; 161141, 2]], []]]
 [[[0, 0, 0]], [[10, 0, [-1, 1; 2, 5; 5, 4; 39821, 2; 161141, 2]]], [], [[], 
 []]]
-[[[matrix(0,2), 0, 0, 0]], [[Mat([50, 1]), 0, 0, 0]], [], [[Mat([50, 2]), 0,
- 0, 0], [Mat([56, 1]), 0, 0, 0]]]
+[[[[Vecsmall([]), Vecsmall([])], 0, 0, 0]], [[[Vecsmall([50]), Vecsmall([1])
+], 0, 0, 0]], [], [[[Vecsmall([50]), Vecsmall([2])], 0, 0, 0], [[Vecsmall([5
+6]), Vecsmall([1])], 0, 0, 0]]]
 2
 [6416795761]
 [x^7 - x^6 + x^5 - x^4 - x^3 - x^2, x^9 + x^8 + x^7 + x^6 + 2*x^4 + 2*x^3 + 
@@ -550,4 +551,4 @@ Mod(-6/5, x)
   ***   at top-level: idealhnf(nfinit(a^2+1),3,(a^2+1)*Mod(1,3))
   ***                          ^---------------------------------
   *** nfinit: incorrect type in checknf [please apply nfinit()] (t_POLMOD).
-Total time spent: 20115
+Total time spent: 8260
