@@ -235,34 +235,41 @@ x^7 - 2575481228604156570*x^6 + 2756771576006241774*x^5 - 289772792762362859
  [], [[], [24, 24, [5, 9; 11, 6; 229, 12]], [24, 24, [5, 9; 11, 6; 229, 12]]
 , []]]
 ? bnrdisclist(bnf,20)
-[[[matrix(0,2), [[6, 6, Mat([229, 3])], [0, 0, 0], [0, 0, 0], [0, 0, 0]]]], 
-[], [[Mat([12, 1]), [[0, 0, 0], [12, 6, [-1, 1; 3, 3; 229, 6]], [0, 0, 0], [
-0, 0, 0]]], [Mat([13, 1]), [[0, 0, 0], [0, 0, 0], [12, 6, [-1, 1; 3, 3; 229,
- 6]], [0, 0, 0]]]], [[Mat([10, 1]), [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0,
- 0]]]], [[Mat([20, 1]), [[12, 12, [5, 3; 229, 6]], [24, 12, [5, 9; 229, 12]]
-, [0, 0, 0], [0, 0, 0]]], [Mat([21, 1]), [[12, 12, [5, 3; 229, 6]], [0, 0, 0
-], [24, 12, [5, 9; 229, 12]], [0, 0, 0]]]], [], [], [], [[Mat([12, 2]), [[0,
- 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]], [[12, 1; 13, 1], [[0, 0, 0], [0, 
-0, 0], [0, 0, 0], [24, 0, [3, 12; 229, 12]]]], [Mat([13, 2]), [[0, 0, 0], [0
-, 0, 0], [0, 0, 0], [0, 0, 0]]]], [], [[Mat([44, 1]), [[0, 0, 0], [0, 0, 0],
- [12, 6, [-1, 1; 11, 3; 229, 6]], [0, 0, 0]]], [Mat([45, 1]), [[0, 0, 0], [1
-2, 6, [-1, 1; 11, 3; 229, 6]], [0, 0, 0], [0, 0, 0]]]], [[[10, 1; 12, 1], [[
-0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]], [[10, 1; 13, 1], [[0, 0, 0], [0
-, 0, 0], [0, 0, 0], [0, 0, 0]]]], [], [], [[[12, 1; 20, 1], [[24, 24, [3, 6;
- 5, 9; 229, 12]], [48, 24, [3, 12; 5, 18; 229, 24]], [0, 0, 0], [0, 0, 0]]],
- [[13, 1; 20, 1], [[0, 0, 0], [0, 0, 0], [24, 12, [3, 6; 5, 6; 229, 12]], [4
-8, 0, [3, 12; 5, 18; 229, 24]]]], [[12, 1; 21, 1], [[0, 0, 0], [24, 12, [3, 
-6; 5, 6; 229, 12]], [0, 0, 0], [48, 0, [3, 12; 5, 18; 229, 24]]]], [[13, 1; 
-21, 1], [[24, 24, [3, 6; 5, 9; 229, 12]], [0, 0, 0], [48, 24, [3, 12; 5, 18;
- 229, 24]], [0, 0, 0]]]], [[Mat([10, 2]), [[0, 0, 0], [12, 6, [-1, 1; 2, 12;
- 229, 6]], [12, 6, [-1, 1; 2, 12; 229, 6]], [24, 0, [2, 36; 229, 12]]]]], [[
-Mat([68, 1]), [[0, 0, 0], [0, 0, 0], [0, 0, 0], [12, 0, [17, 3; 229, 6]]]], 
-[Mat([69, 1]), [[0, 0, 0], [0, 0, 0], [0, 0, 0], [12, 0, [17, 3; 229, 6]]]]]
-, [], [[Mat([76, 1]), [[18, 18, [19, 6; 229, 9]], [36, 18, [-1, 1; 19, 15; 2
-29, 18]], [0, 0, 0], [0, 0, 0]]], [Mat([77, 1]), [[18, 18, [19, 6; 229, 9]],
- [0, 0, 0], [36, 18, [-1, 1; 19, 15; 229, 18]], [0, 0, 0]]]], [[[10, 1; 20, 
-1], [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]], [[10, 1; 21, 1], [[0, 0, 
-0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]]]]
+[[[[Vecsmall([]), Vecsmall([])], [[6, 6, Mat([229, 3])], [0, 0, 0], [0, 0, 0
+], [0, 0, 0]]]], [], [[[Vecsmall([12]), Vecsmall([1])], [[0, 0, 0], [12, 6, 
+[-1, 1; 3, 3; 229, 6]], [0, 0, 0], [0, 0, 0]]], [[Vecsmall([13]), Vecsmall([
+1])], [[0, 0, 0], [0, 0, 0], [12, 6, [-1, 1; 3, 3; 229, 6]], [0, 0, 0]]]], [
+[[Vecsmall([10]), Vecsmall([1])], [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0
+]]]], [[[Vecsmall([20]), Vecsmall([1])], [[12, 12, [5, 3; 229, 6]], [24, 12,
+ [5, 9; 229, 12]], [0, 0, 0], [0, 0, 0]]], [[Vecsmall([21]), Vecsmall([1])],
+ [[12, 12, [5, 3; 229, 6]], [0, 0, 0], [24, 12, [5, 9; 229, 12]], [0, 0, 0]]
+]], [], [], [], [[[Vecsmall([12]), Vecsmall([2])], [[0, 0, 0], [0, 0, 0], [0
+, 0, 0], [0, 0, 0]]], [[Vecsmall([12, 13]), Vecsmall([1, 1])], [[0, 0, 0], [
+0, 0, 0], [0, 0, 0], [24, 0, [3, 12; 229, 12]]]], [[Vecsmall([13]), Vecsmall
+([2])], [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]]], [], [[[Vecsmall([44]
+), Vecsmall([1])], [[0, 0, 0], [0, 0, 0], [12, 6, [-1, 1; 11, 3; 229, 6]], [
+0, 0, 0]]], [[Vecsmall([45]), Vecsmall([1])], [[0, 0, 0], [12, 6, [-1, 1; 11
+, 3; 229, 6]], [0, 0, 0], [0, 0, 0]]]], [[[Vecsmall([10, 12]), Vecsmall([1, 
+1])], [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]], [[Vecsmall([10, 13]), V
+ecsmall([1, 1])], [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]]], [], [], [[
+[Vecsmall([12, 20]), Vecsmall([1, 1])], [[24, 24, [3, 6; 5, 9; 229, 12]], [4
+8, 24, [3, 12; 5, 18; 229, 24]], [0, 0, 0], [0, 0, 0]]], [[Vecsmall([13, 20]
+), Vecsmall([1, 1])], [[0, 0, 0], [0, 0, 0], [24, 12, [3, 6; 5, 6; 229, 12]]
+, [48, 0, [3, 12; 5, 18; 229, 24]]]], [[Vecsmall([12, 21]), Vecsmall([1, 1])
+], [[0, 0, 0], [24, 12, [3, 6; 5, 6; 229, 12]], [0, 0, 0], [48, 0, [3, 12; 5
+, 18; 229, 24]]]], [[Vecsmall([13, 21]), Vecsmall([1, 1])], [[24, 24, [3, 6;
+ 5, 9; 229, 12]], [0, 0, 0], [48, 24, [3, 12; 5, 18; 229, 24]], [0, 0, 0]]]]
+, [[[Vecsmall([10]), Vecsmall([2])], [[0, 0, 0], [12, 6, [-1, 1; 2, 12; 229,
+ 6]], [12, 6, [-1, 1; 2, 12; 229, 6]], [24, 0, [2, 36; 229, 12]]]]], [[[Vecs
+mall([68]), Vecsmall([1])], [[0, 0, 0], [0, 0, 0], [0, 0, 0], [12, 0, [17, 3
+; 229, 6]]]], [[Vecsmall([69]), Vecsmall([1])], [[0, 0, 0], [0, 0, 0], [0, 0
+, 0], [12, 0, [17, 3; 229, 6]]]]], [], [[[Vecsmall([76]), Vecsmall([1])], [[
+18, 18, [19, 6; 229, 9]], [36, 18, [-1, 1; 19, 15; 229, 18]], [0, 0, 0], [0,
+ 0, 0]]], [[Vecsmall([77]), Vecsmall([1])], [[18, 18, [19, 6; 229, 9]], [0, 
+0, 0], [36, 18, [-1, 1; 19, 15; 229, 18]], [0, 0, 0]]]], [[[Vecsmall([10, 20
+]), Vecsmall([1, 1])], [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]], [[Vecs
+mall([10, 21]), Vecsmall([1, 1])], [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 
+0]]]]]
 ? bnrisprincipal(bnr,idealprimedec(bnf,7)[1])
 [[9]~, [32879/6561, 13958/19683]~]
 ? dirzetak(nfinit(x^3-10*x+8),30)
@@ -718,4 +725,4 @@ x^15 - 15*x^11 + 75*x^7 - x^5 - 125*x^3 + 5*x + 1
 0745514]
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 76
+Total time spent: 44
